--- a/PhamVanTri2080601252/Content/Site.css
+++ b/PhamVanTri2080601252/Content/Site.css
@@ -28,3 +28,33 @@ textarea {
     background-color: #777;
     border-color: #fff
 }
+.navbar-inverse {
+    background-color: #0026ff;
+    border-color: #fbf6f6;
+}
+.navbar-inverse .navbar-nav > li > a {
+    color: white;
+}
+.navbar-inverse .navbar-brand {
+    color: white;
+}
+/*Course layout*/
+.course {
+    list-style: none;
+}
+.course > li {
+    position: relative;
+    margin-bottom: 30px;
+}
+.course > li .date {
+    text-align: center;
+    background-color: #b119c8;
+    color: antiquewhite;
+    width: 60px;
+    border-radius: 8px;
+}
+.course > li .details {
+    position: absolute;
+    top: 0;
+    left: 70px;
+}
