--- a/PhamVanTri2080601252/Views/Shared/_Layout.cshtml
+++ b/PhamVanTri2080601252/Views/Shared/_Layout.cshtml
@@ -33,7 +33,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <p>&copy; @DateTime.Now.Year - Pham Van Tri 20DTHE6</p>
         </footer>
     </div>
 
